IaC/bucket/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio
  labels:
    app.kubernetes.io/part-of: elk-metrics
spec:
  to:
    kind: Service
    name: minio
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-console
  labels:
    app.kubernetes.io/part-of: elk-metrics
spec:
  to:
    kind: Service
    name: minio
  port:
    targetPort: console
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
